--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Web">
+    tools:context=".features_functions.Web">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
